syntax = "proto3";
package darkDispatcher.grpc.v1;

import "protos/models/organization.proto";
import "google/protobuf/empty.proto";

service OrganizationService {
  rpc ListOrganizations (google.protobuf.Empty) returns (ListOrganizationsResponse);
  rpc GetOrganization (GetOrganizationRequest) returns (darkDispatcher.proto.Organization);
  rpc CreateOrganization (CreateOrganizationRequest) returns (darkDispatcher.proto.Organization);
  rpc UpdateOrganization (UpdateOrganizationRequest) returns (darkDispatcher.proto.Organization);
  rpc DeleteOrganization (DeleteOrganizationRequest) returns (google.protobuf.Empty);
}

message ListOrganizationsResponse {
  repeated darkDispatcher.proto.Organization organizations = 1;
}

message GetOrganizationRequest {
  string organization_id = 1;
}

message CreateOrganizationRequest {
  string name = 1;
}

message UpdateOrganizationRequest {
  darkDispatcher.proto.Organization organization = 1;
}

message DeleteOrganizationRequest {
  string organization_id = 1;
}


